--- a/contact/index.html
+++ b/contact/index.html
@@ -22,10 +22,12 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 <div class="top">
 	<div class="top_main clearfix">
 		<div class="top_left">
-			欢迎来到顺驰二手车！<a href="/index.php?m=login">登录</a>
-		</div>
+			欢迎来到顺驰二手车！
+							<a href="/index.php?m=login">登录</a>
+					</div>
 		<div class="top_right">
-			<a href="/m/">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb">18157447500</span>
+			<a href="/m/" onmouseover="javascript:$('#mobile_url').show();" onmouseout="javascript:$('#mobile_url').hide();">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb">18157447500</span>
+			<img src="/static/img/mobile_url.png" id="mobile_url" style="position:relative; top:0px; left:-121px; display:none;">
 		</div>
 	</div>
 </div><div class="headw">
@@ -67,6 +69,7 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 		</li>
 			</ul>
 </div>
+
 <!--头部end -->		<div class="main mt10 clearfix">
 			<div class="aboutbox clearfix">
 				<div class="abouttitle fb">联系</div>
@@ -80,7 +83,7 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 					<h3>关于我们</h3>
 					<div class="infobox">
 						<p style="color:#333333;font-family:宋体, 'Arial Narrow', tahoma, arial;font-size:14px;">
-	<br />
+	顺驰名车成立于2008年，坐落在美丽的港口城市宁波。依托9年多在宁波市场客源的积累，目前在宁波最大二手车室内市场途众汽车商城拥有400多平方的展厅。一直以来，公司秉承着“专业对车，诚信对客户”的宗旨，稳健经营，积累进取，开拓创新。现以逐步形成全面，系统，独特的服务方式，各项业务稳步发展，取得了良好的社会效益。
 </p>
 					</div>
 				</div>
